--- a/app/src/main/res/drawable/ic_keyboard.xml
+++ b/app/src/main/res/drawable/ic_keyboard.xml
@@ -1,54 +1,58 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m255.47,107.26c65.42,0 130.85,-0.09 196.27,0.14 6.76,0.02 13.81,1.08 20.22,3.2 19.55,6.46 31.76,23.04 31.83,43.67 0.23,67.48 0.32,134.96 -0.02,202.43 -0.14,27.78 -21.07,47.96 -48.95,47.99 -132.4,0.1 -264.79,0.11 -397.19,0 -28.99,-0.02 -49.52,-20.71 -49.56,-49.55 -0.09,-65.93 -0.1,-131.86 0,-197.79 0.05,-29.57 20.59,-50.03 50.09,-50.06 65.77,-0.07 131.54,-0.02 197.3,-0.02ZM256.51,371.68c64.72,0 129.44,0 194.17,0 2.06,0 4.14,0.07 6.19,-0.13 7.29,-0.72 11.65,-4.43 13.24,-11.63 0.62,-2.82 0.72,-5.79 0.73,-8.7 0.04,-53.01 0.03,-106.02 0.03,-159.02 0,-12.05 0.12,-24.1 -0.06,-36.14 -0.14,-9.35 -5.21,-14.65 -14.49,-15.62 -1.88,-0.2 -3.78,-0.13 -5.68,-0.13 -130.13,0 -260.27,0 -390.4,0 -1.72,0 -3.45,-0.05 -5.16,0.12 -7.28,0.72 -11.6,4.44 -13.25,11.63 -0.53,2.32 -0.7,4.76 -0.7,7.15 -0.04,64.88 -0.03,129.77 -0.02,194.65 0,1.38 -0.02,2.76 0.13,4.13 0.81,7.04 4.44,11.31 11.39,12.89 2.81,0.64 5.79,0.78 8.69,0.78 65.07,0.04 130.13,0.03 195.2,0.03Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m371.45,305.94v32.42h-230.75v-32.42h230.75Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m106.81,206.23h-32.33v-32.59h32.33v32.59Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m140.64,173.59h32.41v32.41h-32.41v-32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m239.22,173.64v32.4h-32.5v-32.4h32.5Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m305.47,173.69v32.31h-32.59v-32.31h32.59Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m371.47,173.74v32.39h-32.41v-32.39h32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m405.11,173.59h32.42v32.41h-32.42v-32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m106.97,239.76v32.38h-32.47v-32.38h32.47Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m140.57,239.72h32.38v32.47h-32.38v-32.47Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m206.75,239.71h32.43v32.41h-32.43v-32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m305.29,272.29h-32.41v-32.49h32.41v32.49Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m371.44,239.82v32.43h-32.41v-32.43h32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m405.11,239.7h32.41v32.41h-32.41v-32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m106.85,338.4h-32.41v-32.41h32.41v32.41Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="m405,338.28v-32.45h32.41v32.45h-32.41Z"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group>
+    <clip-path
+        android:pathData="M0,0h24v24h-24z"/>
+    <path
+        android:pathData="M11.975,5.028C15.042,5.028 18.109,5.024 21.175,5.034C21.492,5.035 21.823,5.085 22.123,5.184C23.04,5.487 23.612,6.264 23.615,7.231C23.626,10.394 23.63,13.558 23.614,16.72C23.608,18.022 22.627,18.968 21.32,18.97C15.113,18.975 8.908,18.975 2.701,18.97C1.343,18.969 0.38,17.999 0.378,16.647C0.374,13.557 0.374,10.466 0.378,7.376C0.381,5.99 1.344,5.031 2.726,5.029C5.809,5.026 8.892,5.028 11.975,5.028L11.975,5.028ZM12.024,17.423C15.058,17.423 18.091,17.423 21.126,17.423C21.222,17.423 21.32,17.426 21.416,17.416C21.758,17.383 21.962,17.209 22.037,16.871C22.066,16.739 22.07,16.6 22.071,16.463C22.073,13.979 22.072,11.494 22.072,9.009C22.072,8.445 22.078,7.88 22.069,7.315C22.063,6.877 21.825,6.629 21.39,6.583C21.302,6.574 21.213,6.577 21.124,6.577C15.024,6.577 8.924,6.577 2.824,6.577C2.743,6.577 2.662,6.575 2.582,6.583C2.241,6.616 2.038,6.791 1.961,7.128C1.936,7.237 1.928,7.351 1.928,7.463C1.926,10.504 1.927,13.546 1.927,16.587C1.927,16.652 1.926,16.717 1.933,16.781C1.971,17.111 2.141,17.311 2.467,17.385C2.599,17.415 2.739,17.422 2.874,17.422C5.925,17.423 8.974,17.423 12.024,17.423L12.024,17.423Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M17.412,14.341V15.861H6.595V14.341H17.412Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M5.007,9.667H3.491V8.139H5.007V9.667Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M6.593,8.137H8.112V9.656H6.593V8.137Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M11.213,8.139V9.658H9.69V8.139H11.213Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M14.319,8.142V9.656H12.791V8.142H14.319Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M17.413,8.144V9.662H15.894V8.144H17.413Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M18.99,8.137H20.509V9.656H18.99V8.137Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M5.014,11.239V12.757H3.492V11.239H5.014Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M6.589,11.237H8.107V12.759H6.589V11.237Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M9.691,11.236H11.212V12.756H9.691V11.236Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M14.311,12.764H12.791V11.241H14.311V12.764Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M17.411,11.242V12.762H15.892V11.242H17.411Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M18.99,11.236H20.509V12.755H18.99V11.236Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M5.009,15.863H3.49V14.343H5.009V15.863Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M18.984,15.857V14.336H20.504V15.857H18.984Z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
