--- a/app/src/main/res/layout/activity_enable_keyboard.xml
+++ b/app/src/main/res/layout/activity_enable_keyboard.xml
@@ -26,6 +26,7 @@
             android:layout_marginHorizontal="@dimen/fab_padding"
             android:gravity="center"
             android:text="Translator Pro Keyboard"
+            android:fontFamily="@font/poppins_regular"
             android:textColor="@color/black"
             android:textSize="@dimen/_18sdp"
             android:textStyle="bold"
@@ -84,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/fab_padding"
                     android:text="Enable Translator Keyboard"
-                    android:textColor="@color/yellow"
+                    android:textColor="@color/accent"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tvHintMeaning"
@@ -106,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="32dp"
-                android:background="@drawable/bg_main_rounded"
+                android:background="@drawable/bg_accent_bordered_less_rounded"
                 android:backgroundTint="@color/disable_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -174,7 +175,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/fab_padding"
                     android:text="Switch keyboard"
-                    android:textColor="@color/yellow"
+                    android:textColor="@color/accent"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_ad"
