--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,7 +143,7 @@
     <color name="btnColor">#BDBDBD</color>
     <color name="colorPrimary">#f8fdf9</color>
     <color name="colorSecondary">#991e272b</color>
-    <color name="line_color">#373e41</color>
+    <color name="line_color">#E0E0E0</color>
     <color name="gray_300">#E0E0E0</color>
 
 
