--- a/app/src/main/res/drawable/bg_main_less_rounded.xml
+++ b/app/src/main/res/drawable/bg_main_less_rounded.xml
@@ -10,7 +10,7 @@
 
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary_color" />
+            <solid android:color="@color/white" />
             <corners android:radius="20sp" />
         </shape>
     </item>
