--- a/app/src/main/res/layout/activity_new_dashboard.xml
+++ b/app/src/main/res/layout/activity_new_dashboard.xml
@@ -123,7 +123,7 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <LinearLayout
-                                android:id="@+id/llLngFromFrag"
+                                android:id="@+id/llLanguageFrom"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginVertical="@dimen/padding"
@@ -135,7 +135,7 @@
                                 android:orientation="horizontal">
 
                                 <com.google.android.material.imageview.ShapeableImageView
-                                    android:id="@+id/flagFromFrag"
+                                    android:id="@+id/flagFrom"
                                     android:layout_width="@dimen/_30sdp"
                                     android:layout_height="@dimen/_30sdp"
                                     android:scaleType="centerCrop"
@@ -143,7 +143,7 @@
                                     app:shapeAppearanceOverlay="@style/roundedCorners" />
 
                                 <TextView
-                                    android:id="@+id/textViewLngFromFrag"
+                                    android:id="@+id/tvLanguageFrom"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
@@ -168,7 +168,7 @@
                                 app:srcCompat="@drawable/ic_switch_lang" />
 
                             <LinearLayout
-                                android:id="@+id/llLngToFrag"
+                                android:id="@+id/llLanguageTo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginVertical="@dimen/padding"
@@ -180,7 +180,7 @@
                                 android:orientation="horizontal">
 
                                 <TextView
-                                    android:id="@+id/textViewLngToFrag"
+                                    android:id="@+id/tvLanguageTo"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_marginHorizontal="@dimen/padding_10"
@@ -194,7 +194,7 @@
                                     tools:ignore="NestedWeights" />
 
                                 <com.google.android.material.imageview.ShapeableImageView
-                                    android:id="@+id/flagToFrag"
+                                    android:id="@+id/flagTo"
                                     android:layout_width="@dimen/_30sdp"
                                     android:layout_height="@dimen/_30sdp"
                                     android:scaleType="centerCrop"
