--- a/app/src/main/res/layout/activity_phrases.xml
+++ b/app/src/main/res/layout/activity_phrases.xml
@@ -4,124 +4,183 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_gradient_dashboard"
+    android:background="@color/bg_color"
     tools:context="org.dslul.openboard.translator.pro.PhrasesActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/llTopBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_top_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="@dimen/padding">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/fab_padding"
+            android:layout_marginTop="@dimen/extra_padding"
+            android:layout_marginBottom="@dimen/fab_padding"
+            android:fontFamily="@font/poppins_regular"
+            android:paddingStart="@dimen/padding"
+            android:text="@string/app_name"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btnSettings"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="@dimen/fab_padding"
+            android:padding="@dimen/padding"
+            android:src="@drawable/ic_baseline_settings_24"
+            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/llLanguageSelector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
         android:gravity="center"
         android:orientation="horizontal"
-        android:animateLayoutChanges="true"
-        app:layout_constraintTop_toTopOf="parent"
-        android:transitionName="anim_cl_languages"
-        app:layout_constraintStart_toStartOf="parent">
+        android:paddingHorizontal="@dimen/m_padding"
+        android:transitionName="anim_ll_languages"
+        app:layout_constraintTop_toBottomOf="@id/llTopBar">
 
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="@dimen/_32sdp"
-            android:layout_height="@dimen/_32sdp"
-            android:layout_marginStart="@dimen/padding"
-            android:background="@drawable/bg_nothing_rounded_ripple"
-            android:contentDescription="@string/todo"
-            android:padding="@dimen/less_padding"
-            android:scaleType="fitCenter"
-            android:transitionName="anim_btn_menu"
-            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="?attr/colorSecondary" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clLanguages"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/llLanguageFrom"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:transitionName="anim_cl_languages">
+            android:layout_marginVertical="@dimen/m_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/llLanguageFrom"
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/flagFrom"
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/us_flag"
+                app:shapeAppearanceOverlay="@style/roundedCorners" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/fab_padding"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/ivSwitchLanguages"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginStart="@dimen/m_padding"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvLanguageFrom"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_regular"
-                    android:padding="@dimen/padding"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="center"
                     android:text="@string/english"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="@dimen/_12sdp" />
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    tools:ignore="NestedWeights" />
 
-                <ImageView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
-                    android:src="@drawable/ic_arrow_down" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.7dp"
+                    android:background="@drawable/bg_rounded"
+                    android:backgroundTint="@color/black" />
+            </LinearLayout>
 
             <ImageView
-                android:id="@+id/ivSwitchLanguages"
-                android:layout_width="@dimen/_36sdp"
-                android:layout_height="@dimen/_24sdp"
-                android:layout_margin="@dimen/fab_padding"
-                android:background="@drawable/bg_btn_switch_languages"
-                android:padding="@dimen/less_padding"
-                android:paddingVertical="@dimen/_3sdp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_switch_languages"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_width="0dp"
+                android:layout_height="@dimen/fab_padding"
+                android:layout_marginHorizontal="6dp"
+                android:layout_marginVertical="@dimen/padding"
+                android:layout_weight="1"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_arrow_down" />
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/llLanguageTo"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/ivSwitchLanguages"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:contentDescription="@string/todo"
+                android:padding="@dimen/padding"
+                app:srcCompat="@drawable/ic_switch_lang" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llLanguageTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/m_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="@dimen/fab_padding"
+                android:layout_marginHorizontal="6dp"
+                android:layout_marginVertical="@dimen/padding"
+                android:layout_weight="1"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_arrow_down" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/fab_padding"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ivSwitchLanguages"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
-                    android:src="@drawable/ic_arrow_down" />
+                android:layout_marginEnd="@dimen/m_padding"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvLanguageTo"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sf_pro_regular"
-                    android:padding="@dimen/padding"
-                    android:text="@string/english"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="@dimen/_12sdp" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="center"
+                    android:text="@string/textView"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    tools:ignore="NestedWeights" />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.7dp"
+                    android:background="@drawable/bg_rounded"
+                    android:backgroundTint="@color/black" />
+            </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/flagTo"
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/by_flag"
+                app:shapeAppearanceOverlay="@style/roundedCorners" />
 
-        <ImageButton
-            android:id="@+id/btnHistory"
-            android:layout_width="@dimen/_32sdp"
-            android:layout_height="@dimen/_32sdp"
-            android:layout_marginEnd="@dimen/padding"
-            android:background="@drawable/bg_nothing_rounded_ripple"
-            android:padding="@dimen/less_padding"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/ic_baseline_access_time_filled_24"
-            app:tint="?attr/colorSecondary" />
+        </LinearLayout>
     </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPhraseBookMain"
@@ -129,7 +188,7 @@
         android:layout_height="0dp"
         android:transitionName="anim_et_main"
         android:paddingHorizontal="@dimen/fab_padding"
-        app:layout_constraintTop_toBottomOf="@+id/llTopBar"
+        app:layout_constraintTop_toBottomOf="@+id/llLanguageSelector"
         app:layout_constraintBottom_toTopOf="@id/nativeAdFrameLayout" />
 
     <LinearLayout
