--- a/app/src/main/res/layout/fragment_phrases.xml
+++ b/app/src/main/res/layout/fragment_phrases.xml
@@ -1,13 +1,216 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_color"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="org.dslul.openboard.translator.pro.fragments.PhrasesFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/llTopBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_top_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="@dimen/padding">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/fab_padding"
+            android:layout_marginTop="@dimen/extra_padding"
+            android:layout_marginBottom="@dimen/fab_padding"
+            android:fontFamily="@font/poppins_regular"
+            android:paddingStart="@dimen/padding"
+            android:text="@string/app_name"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btnSettings"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="@dimen/fab_padding"
+            android:padding="@dimen/padding"
+            android:src="@drawable/ic_baseline_settings_24"
+            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/llLanguageSelector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:gravity="center"
+        android:background="@drawable/bg_rounded"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/fab_padding"
+        android:paddingHorizontal="@dimen/m_padding"
+        android:transitionName="anim_ll_languages"
+        app:layout_constraintTop_toBottomOf="@id/llTopBar">
+
+        <LinearLayout
+            android:id="@+id/llLanguageFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/m_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/flagFrom"
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/us_flag"
+                app:shapeAppearanceOverlay="@style/roundedCorners" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/m_padding"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvLanguageFrom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="center"
+                    android:text="@string/english"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    tools:ignore="NestedWeights" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.7dp"
+                    android:background="@drawable/bg_rounded"
+                    android:backgroundTint="@color/black" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="@dimen/fab_padding"
+                android:layout_marginHorizontal="6dp"
+                android:layout_marginVertical="@dimen/padding"
+                android:layout_weight="1"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_arrow_down" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/ivSwitchLanguages"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:contentDescription="@string/todo"
+                android:padding="@dimen/padding"
+                app:srcCompat="@drawable/ic_switch_lang" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llLanguageTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/m_padding"
+            android:background="@drawable/bg_nothing_rounded_ripple"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="@dimen/fab_padding"
+                android:layout_marginHorizontal="6dp"
+                android:layout_marginVertical="@dimen/padding"
+                android:layout_weight="1"
+                android:background="@drawable/bg_nothing_rounded_ripple"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_arrow_down" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/m_padding"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvLanguageTo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="center"
+                    android:text="@string/textView"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    tools:ignore="NestedWeights" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.7dp"
+                    android:background="@drawable/bg_rounded"
+                    android:backgroundTint="@color/black" />
+            </LinearLayout>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/flagTo"
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/by_flag"
+                app:shapeAppearanceOverlay="@style/roundedCorners" />
+
+        </LinearLayout>
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewPhraseBookMain"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingHorizontal="@dimen/fab_padding"
+        android:layout_marginTop="@dimen/m_padding"
+        app:layout_constraintTop_toBottomOf="@+id/llLanguageSelector"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/llPBPhrasebookFrag"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:elevation="@dimen/fab_padding"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-</FrameLayout>
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/accent" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/translating"
+            android:textColor="@color/accent" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
