--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,22 +11,18 @@
         android:id="@+id/llMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_main_less_rounded"
-        android:orientation="vertical"
-        android:paddingHorizontal="@dimen/fab_padding"
-        android:layout_marginVertical="@dimen/less_padding"
         android:layout_marginHorizontal="@dimen/fab_padding"
+        android:orientation="vertical"
         android:paddingVertical="@dimen/padding">
 
         <TextView
             android:id="@+id/expandedListTVText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/padding_10"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
             android:text="@string/app_name"
-            android:textColor="?attr/colorSecondary"
+            android:fontFamily="@font/poppins_light"
+            android:textSize="14sp"
+            android:textColor="@color/black"
             tools:ignore="RtlSymmetry" />
 
         <LinearLayout
@@ -34,21 +30,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/expandedListTVTranslation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/padding_10"
-                android:paddingTop="10dp"
+                android:fontFamily="@font/poppins_semi_bold"
+                android:textSize="20dp"
                 android:text="@string/app_name"
-                android:paddingBottom="10dp"
-                android:textColor="?attr/colorSecondary" />
+                android:textColor="@color/accent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:orientation="horizontal">
 
                 <ImageButton
                     android:id="@+id/btnCopyItem"
@@ -91,19 +88,13 @@
                     app:srcCompat="@drawable/ic_baseline_share_24"
                     app:tint="@color/gray_700" />
 
-                <ImageButton
-                    android:id="@+id/btnFavoriteItem"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_nothing_rounded_ripple"
-                    android:padding="@dimen/padding"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
+            </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@drawable/bg_rounded"
+                android:backgroundTint="@color/gray_7070"/>
         </LinearLayout>
     </LinearLayout>
 
