--- a/app/src/main/res/layout/loading_ads_dialog.xml
+++ b/app/src/main/res/layout/loading_ads_dialog.xml
@@ -8,7 +8,7 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animation"
-        android:layout_width="@dimen/_200sdp"
+        android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_150sdp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,9 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Loading Ad..."
-        android:visibility="gone"
         android:textColor="@color/accent"
         android:textSize="10pt"
+        android:fontFamily="@font/poppins_regular"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/animation"
         app:layout_constraintLeft_toLeftOf="parent"
