--- a/app/src/main/res/layout/ocr_result_item.xml
+++ b/app/src/main/res/layout/ocr_result_item.xml
@@ -96,7 +96,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_14sdp"
-            android:textColor="@color/gray_400"
+            android:textColor="@color/accent"
             android:paddingHorizontal="@dimen/less_padding"
             android:layout_weight="1"
             android:text="@string/get_pro"/>
